# Made Initial UI
# Added API Calls for Add, Search A Recipe and to get list of Recipes.

# Added a Form to save the Recipe.

--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -1,6 +1,16 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "target": "es5",
+    "typeRoots": ["./node_modules/@types"],
+    "paths": {
+      "@components/*": ["components/*"],
+      "@hooks/*": ["hooks/*"],
+    },
+    "types": [
+      "node",
+      "jest"
+    ],
     "lib": [
       "dom",
       "dom.iterable",
@@ -17,10 +27,15 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "noEmit": true,
-    "jsx": "react-jsx",
+    "jsx": "react-jsx"
   },
   "include": [
-    "src"
+    "src",
+    "jest.config.ts",
+    "**/*.ts",
+    "**/*.tsx"
   ]
 }
