--- a/api/package.json
+++ b/api/package.json
@@ -8,14 +8,15 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@types/color": "^3.0.3",
     "body-parser": "^1.19.0",
     "cors": "2.8.5",
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.11",
-    "@types/node": "^14.14.37",
     "@types/cors": "2.8.10",
+    "@types/express": "^4.17.11",
+    "@types/node": "^14.18.18",
     "nodemon": "2.0.7",
     "ts-node-dev": "1.1.6",
     "typescript": "4.2.3"
