--- a/package.json
+++ b/package.json
@@ -4,5 +4,17 @@
   "private": true,
   "scripts": {
     "postinstall": "(cd api && npm install) && (cd ui && npm install) && (cd e2e && npm install)"
+  },
+  "dependencies": {
+    "@types/color": "^3.0.3",
+    "bootstrap": "^5.1.3",
+    "react-bootstrap": "^2.4.0"
+  },
+  "devDependencies": {
+    "@babel/preset-typescript": "^7.17.12",
+    "@types/bootstrap": "^5.1.12",
+    "@types/jest": "^27.5.1",
+    "@types/react-bootstrap": "^0.32.29",
+    "jest": "^28.1.0"
   }
 }
