--- a/ui/package.json
+++ b/ui/package.json
@@ -6,27 +6,33 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "swr": "^0.5.5",
-    "typescript": "^4.1.2",
+    "typescript": "3.8",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.1.12",
+    "@types/jest": "^26.0.24",
+    "@types/react-bootstrap": "^0.32.29",
     "@types/react-router-dom": "5.1.7",
-    "typescript": "4.2.3"
+    "jest": "^28.1.0",
+    "ts-jest": "^28.0.3",
+    "typescript": "3.8"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
