--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "@types/color": "^3.0.3",
     "bootstrap": "^5.1.3",
-    "react-bootstrap": "^2.4.0"
+    "react-bootstrap": "^2.4.0",
+    "react-toastify": "^9.0.1"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.17.12",
