--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -2,11 +2,9 @@
   "compilerOptions": {
     "baseUrl": ".",
     "target": "es5",
-    "typeRoots": ["./node_modules/@types"],
-    "paths": {
-      "@components/*": ["components/*"],
-      "@hooks/*": ["hooks/*"],
-    },
+    "typeRoots": [
+      "./node_modules/@types"
+    ],
     "types": [
       "node",
       "jest"
@@ -37,5 +35,7 @@
     "jest.config.ts",
     "**/*.ts",
     "**/*.tsx"
-  ]
+  ],
+  "exclude": ["./node_modules"],
+  "extends": "./base-tsconfig.json"
 }
